--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
   <div class="home">
     <div class="content">
       <h5>Selamat Datang</h5>
-      <h1>Konjungi <span class="changecontent"></span></h1>
-      <p>Ayo Konjungi manca negara untuk pengalaman yang memuaskan</p>
+      <h1>Kunjungi <span class="changecontent"></span></h1>
+      <p>Ayo Kunjungi manca negara untuk pengalaman yang memuaskan</p>
       <a href="#book">Booking Tempat</a>
     </div>
   </div>
